--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     </div>
     <div class="links">
       <ul>
-        <li><a href="#">Lorem ipsum dolor</a></li>
-        <li><a href="#">Lorem ipsum dolor</a></li>
-        <li><a href="#">Ver meu portfolio</a></li>
-        <li><a href="#">Lorem ipsum dolor</a></li>
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
+        <li><a href="#">Link 4</a></li>
       </ul>
     </div>
     <div class="social_links">
